--- a/baseBusiness/pom.xml
+++ b/baseBusiness/pom.xml
@@ -35,17 +35,12 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
             <version>${spring.version}</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>commons-logging</groupId>
-                    <artifactId>commons-logging</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-aspects</artifactId>
-            <version>3.1.2.RELEASE</version>
+            <version>${spring.version}</version>
+
         </dependency>
 
         <dependency>
@@ -138,7 +133,7 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-validator</artifactId>
-            <version>5.3.0.Alpha1</version>
+            <version>4.2.0.Final</version>
         </dependency>
         <dependency>
             <groupId>javax.validation</groupId>
