--- a/baseEntity/src/main/resources/properties/database.properties
+++ b/baseEntity/src/main/resources/properties/database.properties
@@ -1,14 +1,14 @@
-dev.sqlserver.database.driverClassName=com.mysql.jdbc.Driver
-dev.sqlserver.database.url=jdbc\:mysql\://localhost:3306/likeme?useUnicode\=true&characterEncoding\=UTF-8
-dev.sqlserver.database.username=root
-dev.sqlserver.database.password=123456
+dev.database.driverClassName=com.mysql.jdbc.Driver
+dev.database.url=jdbc\:mysql\://localhost:3306/base?useUnicode\=true&characterEncoding\=UTF-8
+dev.database.username=root
+dev.database.password=123456
 
-test.sqlserver.database.driverClassName=com.mysql.jdbc.Driver
-test.sqlserver.database.url=jdbc\:mysql\://localhost:3306/likeme?useUnicode\=true&characterEncoding\=UTF-8
-test.sqlserver.database.username=root
-test.sqlserver.database.password=123456
+test.database.driverClassName=com.mysql.jdbc.Driver
+test.database.url=jdbc\:mysql\://localhost:3306/base?useUnicode\=true&characterEncoding\=UTF-8
+test.database.username=root
+test.database.password=123456
 
-prod.sqlserver.database.driverClassName=com.mysql.jdbc.Driver
-prod.sqlserver.database.url=jdbc\:mysql\://localhost:3306/likeme?useUnicode\=true&characterEncoding\=UTF-8
-prod.sqlserver.database.username=root
-prod.sqlserver.database.password=123456
+prod.database.driverClassName=com.mysql.jdbc.Driver
+prod.database.url=jdbc\:mysql\://localhost:3306/base?useUnicode\=true&characterEncoding\=UTF-8
+prod.database.username=root
+prod.database.password=123456
