--- a/baseBusiness/pom.xml
+++ b/baseBusiness/pom.xml
@@ -30,6 +30,12 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.likeme</groupId>
+            <artifactId>baseStatic</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
         <!--spring core-->
         <dependency>
             <groupId>org.springframework</groupId>
