--- a/baseBusiness/pom.xml
+++ b/baseBusiness/pom.xml
@@ -146,6 +146,12 @@
             <artifactId>validation-api</artifactId>
             <version>1.0.0.GA</version>
         </dependency>
+
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.1.1</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -164,4 +170,32 @@
         </plugins>
 
     </build>
+    <!-- 不同的打包环境 -->
+    <profiles>
+        <profile>
+            <id>dev</id>
+            <properties>
+                <!-- 默认启用的是dev环境配置 -->
+                <profiles.activation>dev</profiles.activation>
+            </properties>
+            <activation>
+                <!-- 开发环境，默认激活 -->
+                <activeByDefault>true</activeByDefault>
+            </activation>
+        </profile>
+        <profile>
+            <id>test</id>
+            <properties>
+                <!-- 部署测试环境 -->
+                <profiles.activation>test</profiles.activation>
+            </properties>
+        </profile>
+        <profile>
+            <id>prod</id>
+            <properties>
+                <!-- 部署生产环境 -->
+                <profiles.activation>prod</profiles.activation>
+            </properties>
+        </profile>
+    </profiles>
 </project>
