--- a/baseBusiness/pom.xml
+++ b/baseBusiness/pom.xml
@@ -12,7 +12,7 @@
     <url>http://maven.apache.org</url>
 
     <properties>
-        <jdk.version>1.7</jdk.version>
+        <jdk.version>1.8</jdk.version>
         <spring.version>4.1.1.RELEASE</spring.version>
         <jstl.version>1.2</jstl.version>
         <junit.version>4.11</junit.version>
@@ -35,6 +35,8 @@
             <artifactId>baseStatic</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        
+
 
         <!--spring core-->
         <dependency>
@@ -152,12 +154,27 @@
             <artifactId>logback-classic</artifactId>
             <version>1.1.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.8.1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
         <finalName>baseBusiness</finalName>
 
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>${jdk.version}</source>
+                    <target>${jdk.version}</target>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.mybatis.generator</groupId>
                 <artifactId>mybatis-generator-maven-plugin</artifactId>
