--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,6 @@
     <module>baseStatic</module>
     <module>baseEntity</module>
     <module>baseService</module>
-    <module>baseUtil</module>
   </modules>
   <packaging>pom</packaging>
 
@@ -18,6 +17,7 @@
   <url>http://maven.apache.org</url>
 
   <properties>
+    <jdk.version>1.8</jdk.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
@@ -32,6 +32,18 @@
     </dependency>
   </dependencies>
 
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>${jdk.version}</source>
+          <target>${jdk.version}</target>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 
 
 </project>
